set(CLIENT_SSL_LIBS ${OPENSSL_LIBRARIES})
set(CLIENT_SSL_INCLUDE_DIRS ${OPENSSL_INCLUDE_DIR})
set(CLIENT_CURL_LIBS ${CURL_LIBRARIES})
set(CLIENT_CURL_INCLUDE_DIRS ${CURL_INCLUDE_DIRS})

message("${VE_TOS_LIBRARY} Using Clickhouse third party lib ${CLIENT_SSL_LIBS} ${CLIENT_CURL_LIBS}")
set(VE_TOS_SDK_DIR "${ClickHouse_SOURCE_DIR}/contrib/ve-tos-cpp-sdk/sdk")

set(SDK_HEADER
        ${VE_TOS_SDK_DIR}/include/auth/Credential.h
        ${VE_TOS_SDK_DIR}/include/auth/Credentials.h
        ${VE_TOS_SDK_DIR}/include/auth/Signer.h
        ${VE_TOS_SDK_DIR}/include/auth/SignKeyInfo.h
        ${VE_TOS_SDK_DIR}/include/auth/StaticCredentials.h
        ${VE_TOS_SDK_DIR}/include/auth/FederationCredentials.h
        ${VE_TOS_SDK_DIR}/include/auth/FederationToken.h
        ${VE_TOS_SDK_DIR}/include/auth/FederationTokenProvider.h
        ${VE_TOS_SDK_DIR}/include/common/Common.h
        ${VE_TOS_SDK_DIR}/include/transport/http/HttpClient.h
        ${VE_TOS_SDK_DIR}/include/transport/http/HttpRequest.h
        ${VE_TOS_SDK_DIR}/include/transport/http/HttpResponse.h
        ${VE_TOS_SDK_DIR}/include/transport/http/Url.h
        ${VE_TOS_SDK_DIR}/include/transport/Transport.h
        ${VE_TOS_SDK_DIR}/include/transport/TransportConfig.h
        ${VE_TOS_SDK_DIR}/include/model/acl/Acl.h
        ${VE_TOS_SDK_DIR}/include/model/acl/GetObjectAclOutput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/Grant.h
        ${VE_TOS_SDK_DIR}/include/model/acl/ObjectAclGrant.h
        ${VE_TOS_SDK_DIR}/include/model/acl/ObjectAclRules.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutObjectAclInput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutObjectAclOutput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/Grantee.h
        ${VE_TOS_SDK_DIR}/include/model/acl/Owner.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/HeadBucketV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/ListBucketsInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/ListBucketsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/ListedBucket.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/ListedOwner.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketPolicyOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketPolicyOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketPolicyOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/AbortMultipartUploadInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/AbortMultipartUploadOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/AppendObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/CompleteMultipartUploadInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/InnerUploadedPart.h
        ${VE_TOS_SDK_DIR}/include/model/object/CompleteMultipartUploadOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/CopyObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/CreateMultipartUploadOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/Deleted.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteError.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteMultiObjectsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ObjectTobeDeleted.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteMultiObjectsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ObjectMeta.h
        ${VE_TOS_SDK_DIR}/include/model/object/HeadObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedCommonPrefix.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedDeleteMarkerEntry.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedDeleteMarker.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedObject.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedObjectVersion.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListMultipartUploadsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListMultipartUploadsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadInfo.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadCommonPrefix.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectVersionsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectVersionsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListUploadedPartsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListUploadedPartsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadedPart.h
        ${VE_TOS_SDK_DIR}/include/model/object/MultipartUpload.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/SetObjectMetaOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartCopyInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartCopyOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileInfo.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileCheckpoint.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFilePartInfo.h
        ${VE_TOS_SDK_DIR}/include/model/RequestInfo.h
        ${VE_TOS_SDK_DIR}/include/utils/BaseUtils.h
        ${VE_TOS_SDK_DIR}/include/utils/crc64.h
        ${VE_TOS_SDK_DIR}/include/ClientConfig.h
        ${VE_TOS_SDK_DIR}/include/TosResponse.h
        ${VE_TOS_SDK_DIR}/include/TosRequest.h
        ${VE_TOS_SDK_DIR}/include/Outcome.h
        ${VE_TOS_SDK_DIR}/include/TosError.h
        ${VE_TOS_SDK_DIR}/include/TosClient.h
        ${VE_TOS_SDK_DIR}/include/TosClientV2.h
        ${VE_TOS_SDK_DIR}/include/Config.h
        ${VE_TOS_SDK_DIR}/include/RequestBuilder.h
        ${VE_TOS_SDK_DIR}/include/RequestOptionBuilder.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteObjectInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/CopyObjectV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/CopyObjectV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/acl/GetObjectAclV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/acl/GetObjectAclV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/HeadBucketV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/HeadBucketV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CreateBucketV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/AppendObjectV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/AppendObjectV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/CompleteMultipartUploadV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/CompleteMultipartUploadV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/CreateMultipartUploadInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectBasicOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectToFileInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectToFileOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/HeadObjectV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/HeadObjectV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListMultipartUploadsV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListMultipartUploadsV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListedObjectV2.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectVersionsV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectVersionsV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListPartsOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListPartsInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectFromFileOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectFromFileIntput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartCopyV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartCopyV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartFromFileOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadPartFromFileInput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutObjectAclV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutObjectAclV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/SetObjectMetaInput.h
        ${VE_TOS_SDK_DIR}/include/Type.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileV2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileV2Output.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileCheckpointV2.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFileObjectInfo.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFilePartInfo.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFileCheckpoint.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFileFileInfo.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFileInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/DownloadFileOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFilePartInfoV2.h
        ${VE_TOS_SDK_DIR}/include/model/object/UploadFileInfoV2.h
        ${VE_TOS_SDK_DIR}/include/model/object/PreSignedURLInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PreSignedURLOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketCORSInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketCORSOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketCORSInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketCORSOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketCORSInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketCORSOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/CORSRule.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsType2Input.h
        ${VE_TOS_SDK_DIR}/include/model/object/ListObjectsType2Output.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketStorageClassOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketStorageClassInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketLocationOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketLocationInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketLifecycleInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketLifecycleOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketLifecycleInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketLifecycleOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketLifecycleInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketLifecycleOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketMirrorBackInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/PutBucketMirrorBackOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketMirrorBackInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/GetBucketMirrorBackOutput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketMirrorBackInput.h
        ${VE_TOS_SDK_DIR}/include/model/bucket/DeleteBucketMirrorBackOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectTaggingInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutObjectTaggingOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectTaggingInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/GetObjectTaggingOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteObjectTaggingInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/DeleteObjectTaggingOutput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutBucketAclInput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PutBucketAclOutput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/GetBucketAclInput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/GetBucketAclOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/FetchObjectInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/FetchObjectOutput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutFetchTaskInput.h
        ${VE_TOS_SDK_DIR}/include/model/object/PutFetchTaskOutput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PreSignedPostSignatureInput.h
        ${VE_TOS_SDK_DIR}/include/model/acl/PreSignedPostSignatureOutput.h
        )
set(SDK_LIB
        ${VE_TOS_SDK_DIR}/src/transport/http/HttpClient.cc
        ${VE_TOS_SDK_DIR}/src/transport/http/HttpRequest.cc
        ${VE_TOS_SDK_DIR}/src/transport/http/HttpResponse.cc
        ${VE_TOS_SDK_DIR}/src/transport/http/Url.cc
        ${VE_TOS_SDK_DIR}/src/transport/Transport.cc
        ${VE_TOS_SDK_DIR}/src/transport/DefaultTransport.h
        ${VE_TOS_SDK_DIR}/src/transport/DefaultTransport.cc
        ${VE_TOS_SDK_DIR}/src/utils/BaseUtils.cc
        ${VE_TOS_SDK_DIR}/src/utils/crc64.cc
        ${VE_TOS_SDK_DIR}/src/auth/SignV4.h
        ${VE_TOS_SDK_DIR}/src/auth/SignV4.cc
        ${VE_TOS_SDK_DIR}/src/auth/Signer.cc
        ${VE_TOS_SDK_DIR}/src/auth/FederationCredentials.cc
        ${VE_TOS_SDK_DIR}/src/external/json/json.hpp
        ${VE_TOS_SDK_DIR}/src/model/acl/ObjectAclRules.cc
        ${VE_TOS_SDK_DIR}/src/model/acl/GetObjectAclOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/bucket/ListBucketsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/GetObjectOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ObjectMeta.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListObjectsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListObjectVersionsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/CopyObjectOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/UploadPartCopyOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/MultipartUpload.cc
        ${VE_TOS_SDK_DIR}/src/model/object/CompleteMultipartUploadInput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListUploadedPartsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListMultipartUploadsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/DeleteMultiObjectsInput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/DeleteMultiObjectsOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/UploadFileCheckpoint.cc
        ${VE_TOS_SDK_DIR}/src/model/object/UploadPartOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/UploadFilePartInfo.cc
        ${VE_TOS_SDK_DIR}/src/model/object/UploadFileInfo.cc
        ${VE_TOS_SDK_DIR}/src/TosRequest.cc
        ${VE_TOS_SDK_DIR}/src/RequestBuilder.cc
        ${VE_TOS_SDK_DIR}/src/TosClient.cc
        ${VE_TOS_SDK_DIR}/src/TosClientV2.cc
        ${VE_TOS_SDK_DIR}/src/TosError.cc
        ${VE_TOS_SDK_DIR}/src/TosResponse.cc
        ${VE_TOS_SDK_DIR}/src/TosClientImpl.h
        ${VE_TOS_SDK_DIR}/src/TosClientImpl.cc
        ${VE_TOS_SDK_DIR}/src/utils/MimeType.h
        ${VE_TOS_SDK_DIR}/src/model/object/GetObjectBasicOutput.cc
        ${VE_TOS_SDK_DIR}/src/model/object/CopyObjectV2Output.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListObjectsV2Output.cc
        ${VE_TOS_SDK_DIR}/src/model/object/ListObjectVersionsV2Output.cc
        ${VE_TOS_SDK_DIR}/src/model/acl/GetObjectAclV2Output.cc
        ${VE_TOS_SDK_DIR}/src/model/object/HeadObjectV2Output.cc
        ${VE_TOS_SDK_DIR}/src/utils/LogUtils.h
        )

# use ve-tos-sdk internal spdlog 
file(GLOB spdlogh "${VE_TOS_SDK_DIR}/src/external/spdlog/*.h")
file(GLOB spdlogcfg "${VE_TOS_SDK_DIR}/src/external/spdlog/cfg/*.h")
file(GLOB spdlogdetail "${VE_TOS_SDK_DIR}/src/external/spdlog/details/*.h")
file(GLOB spdlogfmt "${VE_TOS_SDK_DIR}/src/external/spdlog/fmt/*.h")
file(GLOB spdlogsinks "${VE_TOS_SDK_DIR}/src/external/spdlog/sinks/*.h")
file(GLOB spdlog ${spdlogh} ${spdlogcfg} ${spdlogdetail} ${spdlogfmt} ${spdlogsinks})

add_library(${VE_TOS_LIBRARY} STATIC ${SDK_LIB} ${SDK_HEADER} ${spdlog})
target_include_directories(${VE_TOS_LIBRARY} PRIVATE ${VE_TOS_SDK_DIR}/include)
target_include_directories(${VE_TOS_LIBRARY} PRIVATE ${CLIENT_SSL_INCLUDE_DIRS} PRIVATE ${CLIENT_CURL_INCLUDE_DIRS})
#for using ve-tos-sdk internal spdlog  
target_include_directories(${VE_TOS_LIBRARY} PUBLIC ${VE_TOS_SDK_DIR}/src/external)
